syntax = "proto3";

package cagent.v1;

option go_package = "github.com/docker/cagent/gen/proto/cagent/v1;cagentv1";

// AgentService provides operations for managing agents and sessions.
service AgentService {
  // ListAgents returns all available agents.
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);

  // GetAgent returns the configuration for a specific agent.
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse);

  // ListSessions returns all sessions.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // GetSession returns a specific session by ID.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // CreateSession creates a new session.
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);

  // DeleteSession deletes a session by ID.
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);

  // ResumeSession resumes a paused session (e.g., after tool confirmation).
  rpc ResumeSession(ResumeSessionRequest) returns (ResumeSessionResponse);

  // ToggleToolApproval toggles the YOLO mode for a session.
  rpc ToggleToolApproval(ToggleToolApprovalRequest) returns (ToggleToolApprovalResponse);

  // UpdateSessionTitle updates the title of a session.
  rpc UpdateSessionTitle(UpdateSessionTitleRequest) returns (UpdateSessionTitleResponse);

  // ResumeElicitation resumes an elicitation request.
  rpc ResumeElicitation(ResumeElicitationRequest) returns (ResumeElicitationResponse);

  // RunAgent runs an agent loop and streams events.
  rpc RunAgent(RunAgentRequest) returns (stream Event);

  // Ping is a health check endpoint.
  rpc Ping(PingRequest) returns (PingResponse);
}

// Agent represents an agent in the system.
message Agent {
  string name = 1;
  string description = 2;
  bool multi = 3;
}

// ListAgentsRequest is the request for ListAgents.
message ListAgentsRequest {}

// ListAgentsResponse is the response for ListAgents.
message ListAgentsResponse {
  repeated Agent agents = 1;
}

// GetAgentRequest is the request for GetAgent.
message GetAgentRequest {
  string id = 1;
}

// GetAgentResponse is the response for GetAgent.
message GetAgentResponse {
  // The agent configuration as JSON (to preserve flexibility).
  bytes config_json = 1;
}

// SessionSummary is a summary of a session for listing.
message SessionSummary {
  string id = 1;
  string title = 2;
  string created_at = 3;
  int32 num_messages = 4;
  int64 input_tokens = 5;
  int64 output_tokens = 6;
  string working_dir = 7;
}

// ListSessionsRequest is the request for ListSessions.
message ListSessionsRequest {}

// ListSessionsResponse is the response for ListSessions.
message ListSessionsResponse {
  repeated SessionSummary sessions = 1;
}

// Message represents a chat message.
message Message {
  string role = 1;
  string content = 2;
  string created_at = 3;
  string tool_call_id = 4;
  repeated ToolCall tool_calls = 5;
  string reasoning_content = 6;
  string agent_name = 7;
}

// ToolCall represents a tool call.
message ToolCall {
  string id = 1;
  string type = 2;
  FunctionCall function = 3;
}

// FunctionCall represents a function call within a tool call.
message FunctionCall {
  string name = 1;
  string arguments = 2;
}

// Session represents a full session with messages.
message Session {
  string id = 1;
  string title = 2;
  string created_at = 3;
  repeated Message messages = 4;
  bool tools_approved = 5;
  int64 input_tokens = 6;
  int64 output_tokens = 7;
  string working_dir = 8;
}

// GetSessionRequest is the request for GetSession.
message GetSessionRequest {
  string id = 1;
}

// GetSessionResponse is the response for GetSession.
message GetSessionResponse {
  Session session = 1;
}

// CreateSessionRequest is the request for CreateSession.
message CreateSessionRequest {
  int32 max_iterations = 1;
  bool tools_approved = 2;
  string working_dir = 3;
}

// CreateSessionResponse is the response for CreateSession.
message CreateSessionResponse {
  Session session = 1;
}

// DeleteSessionRequest is the request for DeleteSession.
message DeleteSessionRequest {
  string id = 1;
}

// DeleteSessionResponse is the response for DeleteSession.
message DeleteSessionResponse {}

// ResumeSessionRequest is the request for ResumeSession.
message ResumeSessionRequest {
  string id = 1;
  string confirmation = 2; // "approve", "approve-session", or "reject"
  string reason = 3; // optional reason for rejection
}

// ResumeSessionResponse is the response for ResumeSession.
message ResumeSessionResponse {}

// ToggleToolApprovalRequest is the request for ToggleToolApproval.
message ToggleToolApprovalRequest {
  string session_id = 1;
}

// ToggleToolApprovalResponse is the response for ToggleToolApproval.
message ToggleToolApprovalResponse {}

// UpdateSessionTitleRequest is the request for UpdateSessionTitle.
message UpdateSessionTitleRequest {
  string session_id = 1;
  string title = 2;
}

// UpdateSessionTitleResponse is the response for UpdateSessionTitle.
message UpdateSessionTitleResponse {
  string session_id = 1;
  string title = 2;
}

// ResumeElicitationRequest is the request for ResumeElicitation.
message ResumeElicitationRequest {
  string session_id = 1;
  string action = 2; // "accept", "decline", or "cancel"
  bytes content_json = 3; // JSON-encoded map[string]any
}

// ResumeElicitationResponse is the response for ResumeElicitation.
message ResumeElicitationResponse {}

// InputMessage is a message to send to the agent.
message InputMessage {
  string role = 1;
  string content = 2;
  repeated MessagePart multi_content = 3;
}

// MessagePart represents a part of a multi-content message.
message MessagePart {
  string type = 1; // "text" or "image"
  string text = 2;
  string image_url = 3;
}

// RunAgentRequest is the request for RunAgent.
message RunAgentRequest {
  string session_id = 1;
  string agent = 2;
  string agent_name = 3; // Optional: specific agent name for multi-agent setups
  repeated InputMessage messages = 4;
}

// Event is a streaming event from the agent.
// Only one of the event types will be set.
message Event {
  oneof event {
    UserMessageEvent user_message = 1;
    StreamStartedEvent stream_started = 2;
    StreamStoppedEvent stream_stopped = 3;
    AgentChoiceEvent agent_choice = 4;
    AgentChoiceReasoningEvent agent_choice_reasoning = 5;
    PartialToolCallEvent partial_tool_call = 6;
    ToolCallEvent tool_call = 7;
    ToolCallConfirmationEvent tool_call_confirmation = 8;
    ToolCallResponseEvent tool_call_response = 9;
    ErrorEvent error = 10;
    WarningEvent warning = 11;
    TokenUsageEvent token_usage = 12;
    SessionTitleEvent session_title = 13;
    SessionSummaryEvent session_summary = 14;
    SessionCompactionEvent session_compaction = 15;
    ElicitationRequestEvent elicitation_request = 16;
    AuthorizationEvent authorization = 17;
    MaxIterationsReachedEvent max_iterations_reached = 18;
    MCPInitStartedEvent mcp_init_started = 19;
    MCPInitFinishedEvent mcp_init_finished = 20;
    AgentInfoEvent agent_info = 21;
    TeamInfoEvent team_info = 22;
    AgentSwitchingEvent agent_switching = 23;
    ToolsetInfoEvent toolset_info = 24;
    RAGIndexingStartedEvent rag_indexing_started = 25;
    RAGIndexingProgressEvent rag_indexing_progress = 26;
    RAGIndexingCompletedEvent rag_indexing_completed = 27;
    HookBlockedEvent hook_blocked = 28;
    ShellOutputEvent shell_output = 29;
  }
}

// Tool represents a tool definition.
message Tool {
  string name = 1;
  string category = 2;
  string description = 3;
  bytes parameters_json = 4; // JSON-encoded parameters schema
  ToolAnnotations annotations = 5;
  bytes output_schema_json = 6; // JSON-encoded output schema
}

// ToolAnnotations represents tool annotations.
message ToolAnnotations {
  bool read_only_hint = 1;
  bool destructive_hint = 2;
  bool idempotent_hint = 3;
  bool open_world_hint = 4;
}

// ToolCallResult represents the result of a tool call.
message ToolCallResult {
  string output = 1;
  bool is_error = 2;
  bytes meta_json = 3; // JSON-encoded metadata
}

// UserMessageEvent is sent when a user message is received.
message UserMessageEvent {
  string message = 1;
}

// StreamStartedEvent is sent when the stream starts.
message StreamStartedEvent {
  string session_id = 1;
  string agent_name = 2;
}

// StreamStoppedEvent is sent when the stream stops.
message StreamStoppedEvent {
  string session_id = 1;
  string agent_name = 2;
}

// AgentChoiceEvent is sent when the agent produces content.
message AgentChoiceEvent {
  string content = 1;
  string agent_name = 2;
}

// AgentChoiceReasoningEvent is sent when the agent produces reasoning content.
message AgentChoiceReasoningEvent {
  string content = 1;
  string agent_name = 2;
}

// PartialToolCallEvent is sent when a tool call is first received (partial).
message PartialToolCallEvent {
  ToolCall tool_call = 1;
  Tool tool_definition = 2;
  string agent_name = 3;
}

// ToolCallEvent is sent when a complete tool call is received.
message ToolCallEvent {
  ToolCall tool_call = 1;
  Tool tool_definition = 2;
  string agent_name = 3;
}

// ToolCallConfirmationEvent is sent when a tool call needs confirmation.
message ToolCallConfirmationEvent {
  ToolCall tool_call = 1;
  Tool tool_definition = 2;
  string agent_name = 3;
}

// ToolCallResponseEvent is sent when a tool call completes.
message ToolCallResponseEvent {
  ToolCall tool_call = 1;
  Tool tool_definition = 2;
  string response = 3;
  ToolCallResult result = 4;
  string agent_name = 5;
}

// ErrorEvent is sent when an error occurs.
message ErrorEvent {
  string error = 1;
  string agent_name = 2;
}

// WarningEvent is sent for warnings.
message WarningEvent {
  string message = 1;
  string agent_name = 2;
}

// TokenUsageEvent is sent with token usage information.
message TokenUsageEvent {
  string session_id = 1;
  Usage usage = 2;
  string agent_name = 3;
}

// LastMessageUsage contains per-message usage data for the last message.
message LastMessageUsage {
  int64 input_tokens = 1;
  int64 output_tokens = 2;
  int64 cached_input_tokens = 3;
  int64 cache_write_tokens = 4;
  double cost = 5;
  string model = 6;
}

// Usage contains token usage details.
message Usage {
  int64 input_tokens = 1;
  int64 output_tokens = 2;
  int64 context_length = 3;
  int64 context_limit = 4;
  double cost = 5;
  LastMessageUsage last_message = 6;
}

// SessionTitleEvent is sent when the session title is generated.
message SessionTitleEvent {
  string session_id = 1;
  string title = 2;
  string agent_name = 3;
}

// SessionSummaryEvent is sent when a session summary is generated.
message SessionSummaryEvent {
  string session_id = 1;
  string summary = 2;
  string agent_name = 3;
}

// SessionCompactionEvent is sent during session compaction.
message SessionCompactionEvent {
  string session_id = 1;
  string status = 2; // "started" or "completed"
  string agent_name = 3;
}

// ElicitationRequestEvent is sent when an elicitation request is received.
message ElicitationRequestEvent {
  string message = 1;
  bytes schema_json = 2; // JSON-encoded schema
  bytes meta_json = 3; // JSON-encoded metadata
  string agent_name = 4;
}

// AuthorizationEvent is sent for authorization events.
message AuthorizationEvent {
  string confirmation = 1; // "accept", "decline", or "cancel"
  string agent_name = 2;
}

// MaxIterationsReachedEvent is sent when max iterations is reached.
message MaxIterationsReachedEvent {
  int32 max_iterations = 1;
  string agent_name = 2;
}

// MCPInitStartedEvent is sent when MCP initialization starts.
message MCPInitStartedEvent {
  string agent_name = 1;
}

// MCPInitFinishedEvent is sent when MCP initialization finishes.
message MCPInitFinishedEvent {
  string agent_name = 1;
}

// AgentInfoEvent is sent when agent information is available.
message AgentInfoEvent {
  string agent_name = 1;
  string model = 2;
  string description = 3;
  string welcome_message = 4;
}

// AgentDetails contains information about an agent.
message AgentDetails {
  string name = 1;
  string description = 2;
  string provider = 3;
  string model = 4;
}

// TeamInfoEvent is sent when team information is available.
message TeamInfoEvent {
  repeated AgentDetails available_agents = 1;
  string current_agent = 2;
  string agent_name = 3;
}

// AgentSwitchingEvent is sent when agent switching occurs.
message AgentSwitchingEvent {
  bool switching = 1;
  string from_agent = 2;
  string to_agent = 3;
  string agent_name = 4;
}

// ToolsetInfoEvent is sent when toolset information is available.
message ToolsetInfoEvent {
  int32 available_tools = 1;
  bool loading = 2;
  string agent_name = 3;
}

// RAGIndexingStartedEvent is sent when RAG indexing starts.
message RAGIndexingStartedEvent {
  string rag_name = 1;
  string strategy_name = 2;
  string agent_name = 3;
}

// RAGIndexingProgressEvent is sent during RAG indexing progress.
message RAGIndexingProgressEvent {
  string rag_name = 1;
  string strategy_name = 2;
  int32 current = 3;
  int32 total = 4;
  string agent_name = 5;
}

// RAGIndexingCompletedEvent is sent when RAG indexing completes.
message RAGIndexingCompletedEvent {
  string rag_name = 1;
  string strategy_name = 2;
  string agent_name = 3;
}

// HookBlockedEvent is sent when a pre-tool hook blocks a tool call.
message HookBlockedEvent {
  ToolCall tool_call = 1;
  Tool tool_definition = 2;
  string message = 3;
  string agent_name = 4;
}

// ShellOutputEvent is sent for shell output.
message ShellOutputEvent {
  string output = 1;
}

// PingRequest is the request for Ping.
message PingRequest {}

// PingResponse is the response for Ping.
message PingResponse {
  string status = 1;
}
